<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.BackArrowOnly">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/wl_orange"

            android:theme="@style/ThemeOverlay.WlApp.ActionBar"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_container">


        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView android:layout_width="match_parent"
                android:textColor="@color/wl_black"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/wl_log_content"/>

            <RelativeLayout android:layout_width="match_parent" android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content" android:textColor="@color/wl_black"
                    android:layout_height="wrap_content" android:id="@+id/wl_log_email_lbl"
                    android:layout_centerVertical="true"
                    android:text="@string/wl_log_email"/>
                <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/wl_log_email_lbl"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
                    android:id="@+id/wl_log_email_et"/>


            </RelativeLayout>


            <RelativeLayout

                style="@style/WlButtonContainerStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/wl_log_upload_container"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:clickable="false"
                    style="@style/WlButtonContainerStyle.LargeButtonTextStyle"
                    android:text="@string/wl_log_upload_tv"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


    <include layout="@layout/wl_include_progress"/>

</RelativeLayout>
